--- a/Dockerfile.agent
+++ b/Dockerfile.agent
@@ -1,24 +1,32 @@
 FROM ubuntu:20.04
 ENV DEBIAN_FRONTEND=noninteractive
 
+ENV LANG=en_US.UTF-8 \
+    LANGUAGE=en_US:en \
+    LC_ALL=en_US.UTF-8
 
-ENV LANG en_US.UTF-8
-ENV LANGUAGE en_US:en
-ENV LC_ALL en_US.UTF-8
-
-
-RUN apt update && \
-    apt install -y \ 
-        git curl build-essential python3 python3-pip nghttp2 nghttp2-client nghttp2-server autoconf libtool libpsl-dev zlib1g-dev libnghttp2-dev libidn2-0-dev \
-        libbrotli-dev locales libssh-dev libldap2-dev libcurl4-openssl-dev libssl-dev pkg-config ca-certificates openjdk-17-jdk && \
-    apt clean 
+# Generate locale
+RUN apt update && apt install -y locales && \
+    locale-gen en_US.UTF-8 && \
+    update-locale LANG=en_US.UTF-8 LANGUAGE=en_US:en LC_ALL=en_US.UTF-8
 
 
-RUN locale-gen en_US.UTF-8
+# Install base tools first (better caching)
+RUN apt-get update && apt-get install -y \
+    git curl build-essential \
+    python3 python3-pip \
+    openjdk-17-jdk
 
-# Create jenkins user and home directory
+# Install curl dependencies
+RUN apt-get install -y \
+    autoconf libtool libpsl-dev zlib1g-dev \
+    libnghttp2-dev libidn2-0-dev nghttp2 nghttp2-client nghttp2-server\
+    libbrotli-dev libssh-dev libldap2-dev \
+    libcurl4-openssl-dev libssl-dev pkg-config \
+    ca-certificates && \
+    apt-get clean && rm -rf /var/lib/apt/lists/*
+
 RUN useradd -m jenkins
 USER jenkins
 WORKDIR /workspace
 ENTRYPOINT ["sleep", "infinity"]
-
